# ToolBase

./: CMakeLists.txt
src/: main.cpp
src/commands/: Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
src/commands/impl/: Commands.h  ExampleCommand.cpp  ExampleCommand.h
